--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "bootstrap": "^4.5.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
