--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@material-ui/core": "^4.11.0",
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.5.2",
     "prop-types": "^15.7.2",
